refactor: went through entire app

--- a/src/App.style.scss
+++ b/src/App.style.scss
@@ -1,5 +1,8 @@
 $main: #323232;
 $secondary: #a1a1aa;
+$table: #252525;
+$create-icon: #7890b2;
+$delete-icon: #df4444;
 
 .interactive-component {
     width: 100%;
